@@ -55,9 +55,12 @@ import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 /**
+ * @deprecated As of release 3.3.10, not replaced - see TINKERPOP-2317
+ *
  * @author Marko A. Rodriguez (http://markorodriguez.com)
  * @author Stephen Mallette (http://stephen.genoprime.com)
  */
+@Deprecated
 public class PythonTranslator implements Translator.ScriptTranslator {
 
     private static final Set<String> STEP_NAMES = Stream.of(GraphTraversal.class.getMethods()).filter(method -> Traversal.class.isAssignableFrom(method.getReturnType())).map(Method::getName).collect(Collectors.toSet());
